results/archive/b60/compile_add_bias_nchw_kernel.dp_20260309_124352.log
Exit code: 1
Compiler flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64
AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u
=== STDOUT ===
=== SYCL Compilation for Intel XPU (BMG Support) ===
Timestamp: 20260309_124352
Kernel: add_bias_nchw_kernel.dp
Source: /workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp
Compiler: icpx
Compile Flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64
Device Link Flags: -fsycl-max-parallel-link-jobs=4 --offload-compress -fsycl-targets=spir64_gen,spir64 -Xs '-device pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u -options -cl-poison-unsupported-fp64-kernels -options -cl-intel-enable-auto-large-GRF-mode -options -cl-fp32-correctly-rounded-divide-sqrt -options -cl-intel-greater-than-4GB-buffer-required'
AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u

Step 1: Compiling source to object file...
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:53:16: error: unknown type name 'cudaError_t'
   53 | void CudaError(cudaError_t status, const char* file, const int& line);
      |                ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:58:12: error: use of undeclared identifier '__expf'
   58 |   auto e = __expf(el);
      |            ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:78:14: error: use of undeclared identifier 'tanh'; did you mean 'sycl::tanh'?
   78 |       cVal = tanh(cVal);
      |              ^~~~
      |              sycl::tanh
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/builtins/math_functions.inc:148:23: note: 'sycl::tanh' declared here
  148 | BUILTIN_GENF(ONE_ARG, tanh)
      |                       ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:81:29: error: use of undeclared identifier '__expf'
   81 |       cVal = 1.0f / (1.0f + __expf(-cVal));
      |                             ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:88:33: error: use of undeclared identifier '__expf'
   88 |         cVal = scale * alpha * (__expf(cVal) - 1.0f);
      |                                 ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:95:23: error: use of undeclared identifier '__expf'
   95 |       cVal /= (1.0f + __expf(-cVal));
      |                       ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:102:7: error: use of undeclared identifier '__trap'
  102 |       __trap();
      |       ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:111:11: error: use of undeclared identifier 'item'
  111 |   int i = item.get_local_id(0) + item.get_local_range(0) * item.get_group(0);
      |           ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:111:34: error: use of undeclared identifier 'item'
  111 |   int i = item.get_local_id(0) + item.get_local_range(0) * item.get_group(0);
      |                                  ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:111:60: error: use of undeclared identifier 'item'
  111 |   int i = item.get_local_id(0) + item.get_local_range(0) * item.get_group(0);
      |                                                            ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:134:50: error: unknown type name 'cudaStream_t'; did you mean 'ihipStream_t'?
  134 |                   ActivationFunction activation, cudaStream_t stream) {
      |                                                  ^~~~~~~~~~~~
      |                                                  ihipStream_t
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/backend_traits_hip.hpp:26:16: note: 'ihipStream_t' declared here
   26 | typedef struct ihipStream_t *HIPstream;
      |                ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:134:63: error: variable has incomplete type 'ihipStream_t'
  134 |                   ActivationFunction activation, cudaStream_t stream) {
      |                                                               ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/backend_traits_hip.hpp:26:16: note: forward declaration of 'ihipStream_t'
   26 | typedef struct ihipStream_t *HIPstream;
      |                ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:139:24: error: expected expression
  139 |   addBias_NCHW_kernel<<<blocks, kBlockSize, 0, stream>>>(c, a, b, N, C, H, W,
      |                        ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:139:56: error: expected expression
  139 |   addBias_NCHW_kernel<<<blocks, kBlockSize, 0, stream>>>(c, a, b, N, C, H, W,
      |                                                        ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:141:20: error: use of undeclared identifier 'cudaGetLastError'
  141 |   ReportCUDAErrors(cudaGetLastError());
      |                    ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:147:35: error: unknown type name 'cudaStream_t'; did you mean 'ihipStream_t'?
  147 |                                   cudaStream_t stream);
      |                                   ^~~~~~~~~~~~
      |                                   ihipStream_t
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/backend_traits_hip.hpp:26:16: note: 'ihipStream_t' declared here
   26 | typedef struct ihipStream_t *HIPstream;
      |                ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:134:63: error: variable has incomplete type 'ihipStream_t'
  134 |                   ActivationFunction activation, cudaStream_t stream) {
      |                                                               ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:145:15: note: in instantiation of function template specialization 'lczero::sycldnn_backend::addBias_NCHW<float>' requested here
  145 | template void addBias_NCHW<float>(float* c, float* a, float* b, int N, int C,
      |               ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/backend_traits_hip.hpp:26:16: note: forward declaration of 'ihipStream_t'
   26 | typedef struct ihipStream_t *HIPstream;
      |                ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:151:34: error: unknown type name 'cudaStream_t'; did you mean 'ihipStream_t'?
  151 |                                  cudaStream_t stream);
      |                                  ^~~~~~~~~~~~
      |                                  ihipStream_t
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/backend_traits_hip.hpp:26:16: note: 'ihipStream_t' declared here
   26 | typedef struct ihipStream_t *HIPstream;
      |                ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:134:63: error: variable has incomplete type 'ihipStream_t'
  134 |                   ActivationFunction activation, cudaStream_t stream) {
      |                                                               ^
/workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp:149:15: note: in instantiation of function template specialization 'lczero::sycldnn_backend::addBias_NCHW<sycl::detail::half_impl::half>' requested here
  149 | template void addBias_NCHW<sycl::half>(sycl::half* c, sycl::half* a, sycl::half* b, int N, int C, int H,
      |               ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/backend_traits_hip.hpp:26:16: note: forward declaration of 'ihipStream_t'
   26 | typedef struct ihipStream_t *HIPstream;
      |                ^
19 errors generated.
[ERROR] Compilation step 1 failed with exit code 1

=== STDERR ===
+ echo '=== SYCL Compilation for Intel XPU (BMG Support) ==='
+ echo 'Timestamp: 20260309_124352'
+ echo 'Kernel: add_bias_nchw_kernel.dp'
+ echo 'Source: /workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp'
+ echo 'Compiler: icpx'
+ echo 'Compile Flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64'
+ echo 'Device Link Flags: -fsycl-max-parallel-link-jobs=4 --offload-compress -fsycl-targets=spir64_gen,spir64 -Xs '\''-device pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u -options -cl-poison-unsupported-fp64-kernels -options -cl-intel-enable-auto-large-GRF-mode -options -cl-fp32-correctly-rounded-divide-sqrt -options -cl-intel-greater-than-4GB-buffer-required'\'''
+ echo 'AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u'
+ echo ''
+ '[' '!' -f /workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp ']'
+ mkdir -p /workspace/build_sycl
+ mkdir -p /workspace/results/b60
+ echo 'Step 1: Compiling source to object file...'
+ icpx -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64 -c /workspace/kernel_dataset/sycl/add_bias_nchw_kernel.dp.cpp -o /workspace/build_sycl/add_bias_nchw_kernel.dp.o
+ tee /workspace/results/b60/compile_add_bias_nchw_kernel.dp_20260309_124352.log.step1
+ STEP1_EXIT=1
+ '[' 1 -ne 0 ']'
+ echo '[ERROR] Compilation step 1 failed with exit code 1'
+ exit 1
